# django-api-boilerplate

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .env  .gitignore  Dockerfile  README.rst  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  settings.toml
{{ cookiecutter.project_name }}/api/: models.py  serializers.py  tests.py  views.py
{{ cookiecutter.project_name }}/scripts/: app-setup.sh  run.sh
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: asgi.py  settings.py  urls.py  wsgi.py
